# Tools

./: .gitignore  CMakeLists.txt  README  dependencies.tex
scripts/: check_all_repos.sh  generate_dependency_data.sh  include_graph.sh  log_histogram.awk
src/genotype/: selfawaregenome.cpp  selfawaregenome.h  selfawaregenome.hpp  selfawaregenome_test.cpp
src/random/: dice.hpp  random_iterator.hpp
src/settings/: configfile.cpp  configfile.h  mutationbounds.hpp  prettyenums.hpp  prettystreamers.hpp
src/utils/: assertequal.hpp  functions.h  indentingostream.cpp  indentingostream.h  proc.cpp  proc.h  shell.hpp  utils.cpp  utils.h
